[package]
name = "keypeek"
license = "GPL-3.0-only"
description = "Keyboard layer overlay for VIA, Vial, and ZMK"
authors = ["Stephan Rumswinkel"]
repository = "https://github.com/srwi/keypeek"
readme = "README.md"
version = "0.5.1"
edition = "2021"

[dependencies]
rust-ini = "0.21.3"
dirs = "6.0.0"
tray-icon = "0.22.0"
eframe = { version = "0.34.1", features = ["glow"] }
egui_extras = { version = "0.34.1", features = ["all_loaders"] }
qmk-via-api = { version = "0.7.0" }
hidapi = "2.6.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
egui-phosphor = { version = "0.12.0", features = ["fill"] }
egui-file-dialog = "0.13.0"
image = "0.25.10"
lzma-rs = "0.3"
serialport = "4.9.0"
zmk-studio-api = { version = "0.3.1", features = ["serial", "ble"] }
clap = { version = "4.6.1", features = ["derive"] }
interprocess = "2.4.2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
winit = "0.30.13"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Devices_Bluetooth", "Devices_Radios", "Foundation"] }

[package.metadata.bundle]
name = "KeyPeek"
identifier = "dev.srwi.keypeek"
osx_info_plist_exts = ["resources/macos-info-plist-ext.xml"]

